# TextSearch

./: CMakeLists.txt  TextSearch.pro  main.cpp  searchtask.cpp  searchtask.h  searchworker.cpp  searchworker.h  textsearch.cpp  textsearch.h  textsearch.ui
Test_files/: file1.txt  file16.txt  file2.txt
